--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
 								<h1>Hi. I'm <strong>Swati Lad</strong>.</h1>
 							</header>
 							<p>Welcome to my portfolio, I am <strong>UX/UI developer from Pune </strong>, I am passionate about creating designs that are appealling. </p>
+							<p>WEB + Mobile = <strong>Responsive</strong></p>
 							<a href="#skills" class="button big scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -50,7 +51,7 @@
 				<article id="skills">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Turn ideas into existence.</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -84,7 +85,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Want to craft your designs with latest technologies ?</p>
 						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
 					</footer>
 				</article>
@@ -94,8 +95,8 @@
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
+						<h2>Here’s some stuff I made.</h2>
+						<p>Simple, Elegant <strong>&</strong> Unique</p>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -156,8 +157,8 @@
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
+						<h2>Let me make stuff for you.</h2>
+						<p>Why not introduce yourself or drop me a line ?</p>
 					</header>
 					<div>
 						<div class="row">
@@ -201,12 +202,12 @@
 								<ul class="social">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>		
 									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 									<!--
+									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
 									<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
@@ -224,7 +225,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; SuperDesigns. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 				</article>
